# weather

./: .gitignore  README.md
backend/: app.py  weather_engine_bridge.py  weather_service.py
cpp_engine/: CMakeLists.txt  README.md
cpp_engine/src/: main.cpp  weather_engine.cpp  weather_engine.h
desktop/: run_desktop.py  weather_app.py
frontend/: download.html  index.html  manifest.json  offline.html  sw.js
frontend/css/: style.css
frontend/downloads/: WeatherView-Android.apk  WeatherView-Linux.sh  WeatherView-Mac.sh
frontend/icons/: generate_icons.py
frontend/js/: app.js
mobile/: build_apk.py  generate_apk.py
